--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -7,12 +7,13 @@ data:
     PASSWORDEXCHANGE_EMAILPASS: ENC[AES256_GCM,data:+sCF4pXIQ0DMRbbfCLh73um1MrlYYN/XJWvFSHhdZJ1tD5fNeR6z4zZ7GIHzKYhk8drdp+pgPk/qcY/6,iv:SxAdervl03qSselq0PCsVVpRS29RXGTTMtKFfRxbdVs=,tag:PsBjfy/egxsphFNeEBOizQ==,type:str]
     PASSWORDEXCHANGE_EMAILHOST: ENC[AES256_GCM,data:hQxijDV6mLE9norTJD2kax3YVCbLTABqi8GKWTHfRZ3L9aMluICHJr4HbIYk5njM,iv:ml/OAuG3RUwY1adFdjOnsKCT9gHNGv3xDkTjkWYwzeM=,tag:p1VEDE/0T3Mm5R0RvVPKqw==,type:str]
     PASSWORDEXCHANGE_EMAILPORT: ENC[AES256_GCM,data:MGCLoA==,iv:dCHKeuZWdpXNCPohbG6M8NaETF9LSI84THM/rOGiv/g=,tag:GIpty/vJUAH2uC2XPhRetg==,type:str]
-    PASSWORDEXCHANGE_PROD_HOST: ENC[AES256_GCM,data:IGX7Ryn8O6mhcnpXVtWVDf4tikXFlXrrZLO6RgSMnbUWs8K6,iv:0GI93mJPbFUqXjF2rj8rGcnAAX3n8LTB8xERdLksb30=,tag:qE6GJze2+EIzEZETaiJQdA==,type:str]
-    PASSWORDEXCHANGE_DEV_HOST: ENC[AES256_GCM,data:Sz1zrr6ItOJjHkvHpO0x8i9bwIOOlWgDTLwsqq4Ha0GYrijGqL+JqQ==,iv:cZzcgAALxA9Jrj+rGLe01J9SVxutor1afrg9yYabfxY=,tag:xU0UK+tAh2yru4RRrEircg==,type:str]
-    PASSWORDEXCHANGE_ENCRYPTION_PROD_SERVICE: ENC[AES256_GCM,data:uMrW2Fmgaadn7LcVMUIIczKlt/5+w2EVidPaRDVimmk=,iv:0zMjLPs5OjmUo6d+IvnuCIu5q9i0fSesPgthyIdomz4=,tag:xjrgG7TAIbP1ovXbhqKw+w==,type:str]
-    PASSWORDEXCHANGE_DATABASE_PROD_SERVICE: ENC[AES256_GCM,data:RCmR0B80ZKDPAK9t+ZCSS5UWUnnw+AjZQ+EuPHP1fdMAGWb3,iv:BfCOpdhPWXPCTRWR9kWo3yu7xrg2sFMlfahaRCv2cxI=,tag:KFGn8kgagiOURwMyJxRdXQ==,type:str]
-    PASSWORDEXCHANGE_ENCRYPTION_DEV_SERVICE: ENC[AES256_GCM,data:6kle4XnT2MVFvTQIr+++xLMZlr3c46giFUO0TQuV2qM=,iv:AVG/XCoXv0SMfRR5UQ1o1ckF6REwL4u22aqqbBYyOFM=,tag:55lAohkpDugc37bCfjEckQ==,type:str]
-    PASSWORDEXCHANGE_DATABASE_DEV_SERVICE: ENC[AES256_GCM,data:pl+mnEuTR41PQ66OfJOCCrAbGSyhtklfplBtgo34Faph8qbX,iv:foE3fOyhtuFl+2OH7RFfCFhUpWjXq/2CJ+rKKe4UXtc=,tag:9PTq5RuPZBSzgzd7oSLosw==,type:str]
+    PASSWORDEXCHANGE_EMAILFROM: ENC[AES256_GCM,data:0Q02fYcuSU2kvzxQ7ff+RRionAIT7mPHR3QckhGFQXU=,iv:m3rkqJb+70QfoT49gZ2tJ6L1l6BqdQdmUPkEiQYMxGw=,tag:MzgdkK1yCZrxsrJZkNj8Tw==,type:str]
+    PASSWORDEXCHANGE_PRODHOST: ENC[AES256_GCM,data:AhmEV8ZUcD9y1vJ20RDLzYLxETcgdt580hZlEtSNetwg90qO,iv:V8PpaXtdKnX1n2kMu3WdtdpvOuAwiBdFJtWizsJVZNI=,tag:B1YzYy+pUPUL/M0iUgDOKw==,type:str]
+    PASSWORDEXCHANGE_DEVHOST: ENC[AES256_GCM,data:q998++c4l+s2RM34ObxAZt64WwVR7ZcwAaSBzG/skLPofBnoOtjyRg==,iv:j6zbnfn3c3IHAlKWXEUwGXzXtg52LnfQ7xj09JdID+A=,tag:qA79R2jaRYYhQa60Dld00Q==,type:str]
+    PASSWORDEXCHANGE_ENCRYPTIONPRODSERVICE: ENC[AES256_GCM,data:yza9ptsvaILVIqTCg+MB1TCNJi1nIT2YuCQ7E4feCjU=,iv:JWxZVFw7cxSIkd1EkkLDcRQknJvZkzYB74uTLWJVKBc=,tag:pug230Ad1ZmpiDZZWnPBDQ==,type:str]
+    PASSWORDEXCHANGE_DATABASEPRODSERVICE: ENC[AES256_GCM,data:JuWggtk1G388BYqBXbLzZjHKK6jdNxNAFX4XvCP0kEAjmA+8,iv:VfCgT1JCglP3+oZpyV+IBFE9jMDpLP8J4/JYR65ICb8=,tag:mUCddkxejch3omhlaYlaYg==,type:str]
+    PASSWORDEXCHANGE_ENCRYPTIONDEVSERVICE: ENC[AES256_GCM,data:mjxjVRfAJ+p7khZyf99DRmZL0Id3PBTJjD7F+x7RGGA=,iv:JzwAZmBFe4KMOVw36oyOiQ/0TIrHqYb+C2MiYufPNwI=,tag:wMGmT1XwA8t0j38TI9VWnw==,type:str]
+    PASSWORDEXCHANGE_DATABASEDEVSERVICE: ENC[AES256_GCM,data:A1r0/Zvd8e221Q/3praCHuPKdjnIKENpmScbq3SCc/HNE4jK,iv:O9a7CPWMkBAn9q2bKXOtEdNvnaua9/5NF5z4EEwn2kg=,tag:gT12Npp4RCDpDDtwsiK44g==,type:str]
     PASSWORDEXCHANGE_DBNAME: ENC[AES256_GCM,data:EI/9PO6NX7Oa0Wts6VE/Ovk1A99CdSQA,iv:z6M7rt9nSPEctWjKULJQPyVxnhtDEEnpixuiyiTYWaE=,tag:seAbvPx8R3iLtzhJTpFeRg==,type:str]
     PASSWORDEXCHANGE_DBHOST: ENC[AES256_GCM,data:63WM8yLQpcQwrQiA,iv:0VayBoEaFVgdgRj/1pvmaQM+OCebYFZFKEuSeR8Q1Qc=,tag:bOXS69aBt0x5MQTAXc1T9A==,type:str]
     PASSWORDEXCHANGE_DBPASS: ENC[AES256_GCM,data:+YhW9y3O91tRHh+ZBDe+qKTz2RSa9jLOMOMOADSI9VM=,iv:w2UpcRwg/hjrntL+YuGpfrF/76xA0x4b1Y5gvJxHAt0=,tag:LWGjq90lBoPIjEEztB6zSg==,type:str]
@@ -20,6 +21,11 @@ data:
     PASSWORDEXCHANGE_DBPORT: ENC[AES256_GCM,data:+PXw7x78gdo=,iv:6JGXPgOYnTluAYci+sraD5XegretsFmR5vqqQQbwec0=,tag:m4kjgsly0PabF/6lsCKCaw==,type:str]
     PASSWORDEXCHANGE_HCAPTCHA_SECRET: ENC[AES256_GCM,data:WDuygJkmvt361wIo/fIXZZ7cTJsFqCH5g92tZHDCz30h8h6btu1tze6s0TGAJpjkSJzi7PpM92o=,iv:96tOvQph6daiiVtnLDHAIzYdEXEDDbs4u3rA+JgHs7Y=,tag:Cx16BwZ0o1wdl4GxCeicng==,type:str]
     PASSWORDEXCHANGE_HCAPTCHA_SITEKEY: ENC[AES256_GCM,data:efO/OZrpcapA9LGHHlxdAKoGJL72B1n3gqNwIXCd+HNKnfN6Ei/ZVnn4sEQn3Kim,iv:NmN0caFkOISrZ2RsLnOd1/9w+EhlPpFb/D9XbHgUoXQ=,tag:GmzcgFsqeVcWrA9UdLdmPQ==,type:str]
+    PASSWORDEXCHANGE_RABPORT: ENC[AES256_GCM,data:kezIfRPHjNE=,iv:Vyr1fxX3MwfO7gomP2GG2jNBAlv7+qFDa9KiAUBhjfA=,tag:+YkD45xdD6X/RRd+6WxGZg==,type:str]
+    PASSWORDEXCHANGE_RABHOST: ENC[AES256_GCM,data:YFgYGz+nXqJfbxqT70n2dQ==,iv:+LxYP4JBd8GOJ0qDmhVCv2+Bd1twhspWpjXbTlCMF5E=,tag:3ZqkFlzG4xp737tQj4qvzQ==,type:str]
+    PASSWORDEXCHANGE_RABQNAME: ENC[AES256_GCM,data:FnHcfNWeY6I=,iv:9h4ZHD816pNXv4b/cDGp1c/9qVnj5ZlC//uiWHKUd60=,tag:p8v7wO9bNe4sRbCFxEJThA==,type:str]
+    PASSWORDEXCHANGE_RABUSER: ENC[AES256_GCM,data:HcgNGP0QVY0=,iv:qeO69j2oYFtNjqR5orDh+OIW0sKEgS0JukZbUEY/eAk=,tag:ITnaeRDLlfuPqnEJyYKHMg==,type:str]
+    PASSWORDEXCHANGE_RABPASS: ENC[AES256_GCM,data:cB9bmk5gWlw=,iv:GiAOMeXdIDXTRjQiI/Q9jDUButmm7tuJeZIhNha1oRg=,tag:ePCloHnm4Uz74wQartjozQ==,type:str]
     OAUTHDB_PASSWORD: ENC[AES256_GCM,data:lSPN2WXziBCnUoZelyIZMeKfN/ZKMyDN,iv:lDIhSPbVH2MF5giNQkBJ9dMfLJzdV7rcDFNwFPsTMAY=,tag:WMhpkn+Mhj4VVHhurgEZCg==,type:str]
     OAUTHDB_USER: ENC[AES256_GCM,data:r9/sTZEsVfDHH2hz,iv:lS3e2+JL/8rkBI1Trzal2KUg0sDb24Zw4YbVU8IRp9I=,tag:bVHhRukiezkjxPN8qmMHvw==,type:str]
     OAUTHDB_NAME: ENC[AES256_GCM,data:cU4HS3hXYh0=,iv:CEdM2vjSwfEp+inIRWfyOfziRm2qnuOEgatPRW5JZ4I=,tag:U+GrueRc08R49o86f11Gmw==,type:str]
@@ -39,8 +45,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-06-02T13:15:18Z"
-    mac: ENC[AES256_GCM,data:qyHRnl+XT08v5KPUJFsRudOHxcZ/nMeRr1Ap96HQehgX/k02OQfXB/E/Zor1I6gdAQJIw3am/atFct/0VpskKUo4j5oaGOq9zFKyosFXg8dRXtUjrsHdFWn2fKVvXmBRT84v4QO66jhmwQmoUn7Ac29+w2I7/EWD0zOjm3HV2fs=,iv:l29B55xqeH9bSrcrqXUzwlFP25VSALKHlzuuVHWwNy0=,tag:H3qVrzlyP/apKLnD/G/rIA==,type:str]
+    lastmodified: "2022-11-12T05:40:22Z"
+    mac: ENC[AES256_GCM,data:V8pQ0U2XBXfT3JS7a0qqFii/7zbGrNotv57nYaqKzE1enew9pQ47BBnTLUfCb2Ux7kSfbH0Sp/1TbgB8QFVnnM5cd/GpO7wcFkpQ0tnaPeQ0wG04nzOpGK+40mI110SJZAe5MASdNJpMjbaVwJkeFEt/cKIbia4XCkwaVBRgEh8=,iv:DCpOFQidOcpX6YT5xkAJ/paJFEt4H1/n7iiJJJLyLSU=,tag:FTZeBpds/zkgv/SKxMX72g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
