--- a/app/cmd/BUILD.bazel
+++ b/app/cmd/BUILD.bazel
@@ -1,13 +1,13 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
-    name = "email",
-    srcs = ["email.go"],
-    importpath = "github.com/Anthony-Bible/password-exchange/app/email",
+    name = "cmd",
+    srcs = ["root.go"],
+    importpath = "github.com/Anthony-Bible/password-exchange/app/cmd",
     visibility = ["//visibility:public"],
     deps = [
-        "//app/message",
         "@com_github_rs_zerolog//log",
+        "@com_github_spf13_cobra//:cobra",
         "@com_github_spf13_viper//:viper",
     ],
 )
