--- a/k8s/database.deployment.yaml
+++ b/k8s/database.deployment.yaml
@@ -27,6 +27,7 @@ spec:
         - secretRef:
             name: test-secret
         image: ghcr.io/anthony-bible/passwordexchange-database
+        args: ["database"]
         env:
         - name: "PASSWORDEXCHANGE_RUNNING_ENVIRONMENT"
           value: "%{PHASE}"
