--- a/protos/BUILD.bazel
+++ b/protos/BUILD.bazel
@@ -1,9 +1,8 @@
-load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
 load("@rules_proto//proto:defs.bzl", "proto_library")
-load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 load("@build_stack_rules_proto//rules/py:grpc_py_library.bzl", "grpc_py_library")
 load("@build_stack_rules_proto//rules/py:proto_py_library.bzl", "proto_py_library")
-
+load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
+load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 proto_library(
     name = "databasepb_proto",
     srcs = ["database.proto"],
@@ -17,11 +16,54 @@ proto_library(
     visibility = ["//visibility:public"],
 )
 
+proto_library(
+    name = "messagepb_proto",
+    srcs = ["message.proto"],
+    visibility = ["//visibility:public"],
+)
+
+proto_compile(
+    name = "databasepb_go_compile",
+    output_mappings = ["database.pb.go=github.com/Anthony-Bible/password-exchange/protos/databasepb/database.pb.go"],
+    outputs = ["database.pb.go"],
+    plugins = ["@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go"],
+    proto = "databasepb_proto",
+)
+
+proto_compile(
+    name = "encryptionpb_go_compile",
+    output_mappings = ["encryption.pb.go=github.com/Anthony-Bible/password-exchange/app/protos/encryptionpb/encryption.pb.go"],
+    outputs = ["encryption.pb.go"],
+    plugins = ["@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go"],
+    proto = "encryptionpb_proto",
+)
+
+proto_compile(
+    name = "messagepb_go_compile",
+    output_mappings = ["message.pb.go=github.com/Anthony-Bible/password-exchange/app/protos/messagepb/message.pb.go"],
+    outputs = ["message.pb.go"],
+    plugins = ["@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go"],
+    proto = "messagepb_proto",
+)
+
 grpc_py_library(
     name = "databasepb_grpc_py_library",
     srcs = ["database_pb2_grpc.py"],
     visibility = ["//visibility:public"],
     deps = [":databasepb_py_library"],
+)
+
+proto_compile(
+    name = "databasepb_python_compile",
+    outputs = [
+        "database_pb2.py",
+        "database_pb2_grpc.py",
+    ],
+    plugins = [
+        "@build_stack_rules_proto//plugin/builtin:python",
+        "@build_stack_rules_proto//plugin/grpc/grpc:protoc-gen-grpc-python",
+    ],
+    proto = "databasepb_proto",
 )
 
 proto_py_library(
@@ -38,26 +80,6 @@ grpc_py_library(
     deps = [":encryptionpb_py_library"],
 )
 
-proto_py_library(
-    name = "encryptionpb_py_library",
-    srcs = ["encryption_pb2.py"],
-    visibility = ["//visibility:public"],
-    deps = ["@com_google_protobuf//:protobuf_python"],
-)
-
-proto_compile(
-    name = "databasepb_python_compile",
-    outputs = [
-        "database_pb2.py",
-        "database_pb2_grpc.py",
-    ],
-    plugins = [
-        "@build_stack_rules_proto//plugin/builtin:python",
-        "@build_stack_rules_proto//plugin/grpc/grpc:protoc-gen-grpc-python",
-    ],
-    proto = "databasepb_proto",
-)
-
 proto_compile(
     name = "encryptionpb_python_compile",
     outputs = [
@@ -71,22 +93,25 @@ proto_compile(
     proto = "encryptionpb_proto",
 )
 
-proto_compile(
-    name = "databasepb_go_compile",
-    output_mappings = ["database.pb.go=github.com/Anthony-Bible/password-exchange/protos/databasepb/database.pb.go"],
-    outputs = ["database.pb.go"],
-    plugins = ["@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go"],
-    proto = "databasepb_proto",
+proto_py_library(
+    name = "encryptionpb_py_library",
+    srcs = ["encryption_pb2.py"],
     visibility = ["//visibility:public"],
+    deps = ["@com_google_protobuf//:protobuf_python"],
 )
 
 proto_compile(
-    name = "encryptionpb_go_compile",
-    output_mappings = ["encryption.pb.go=github.com/Anthony-Bible/password-exchange/protos/encryptionpb/encryption.pb.go"],
-    outputs = ["encryption.pb.go"],
-    plugins = ["@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go"],
-    proto = "encryptionpb_proto",
+    name = "messagepb_python_compile",
+    outputs = ["message_pb2.py"],
+    plugins = ["@build_stack_rules_proto//plugin/builtin:python"],
+    proto = "messagepb_proto",
+)
+
+proto_py_library(
+    name = "messagepb_py_library",
+    srcs = ["message_pb2.py"],
     visibility = ["//visibility:public"],
+    deps = ["@com_google_protobuf//:protobuf_python"],
 )
 
 go_proto_library(
@@ -102,5 +127,13 @@ go_proto_library(
     compilers = ["@io_bazel_rules_go//proto:go_grpc"],
     importpath = "github.com/Anthony-Bible/password-exchange/app/encryptionpb",
     proto = ":encryptionpb_proto",
+    visibility = ["//visibility:public"],
+)
+
+go_proto_library(
+    name = "messagepb_go_proto",
+    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
+    importpath = "github.com/Anthony-Bible/password-exchange/app/messagepb",
+    proto = ":messagepb_proto",
     visibility = ["//visibility:public"],
 )
