Chore: change renovate to semnatic commits

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,5 +2,6 @@
     "kubernetes": {
       "fileMatch": ["kubernetes/.+\\.yaml$"]
     },
-    "dependencyDashboard": true
+    "dependencyDashboard": true,
+    "semanticCommits": true
   }
