--- a/slackbot/BUILD.bazel
+++ b/slackbot/BUILD.bazel
@@ -6,6 +6,7 @@ load("@rules_python//gazelle/manifest:defs.bzl", "gazelle_python_manifest")
 load("@rules_python//gazelle/modules_mapping:def.bzl", "modules_mapping")
 load("@io_bazel_rules_docker//docker/package_managers:download_pkgs.bzl", "download_pkgs")
 load("@io_bazel_rules_docker//docker/package_managers:install_pkgs.bzl", "install_pkgs")
+
 # This rule fetches the metadata for python packages we depend on. That data is
 # required for the gazelle_python_manifest rule to update our manifest file.
 modules_mapping(
@@ -23,11 +24,11 @@ modules_mapping(
 gazelle_python_manifest(
     name = "gazelle_python_manifest",
     modules_mapping = ":modules_map",
+    # When using pip_parse instead of pip_install, set the following.
+    pip_repository_incremental = True,
     # This is what we called our `pip_install` rule, where third-party
     # python libraries are loaded in BUILD files.
     pip_repository_name = "pip",
-    # When using pip_parse instead of pip_install, set the following.
-    # pip_repository_incremental = True,
     # This should point to wherever we declare our python dependencies
     # (the same as what we passed to the modules_mapping rule in WORKSPACE)
     requirements = ":requirements.txt",
@@ -48,12 +49,11 @@ py_library(
         "//protos:databasepb_grpc_py_library",
         "@pip//pypi__flask",
         "@pip//pypi__grpcio",
+        "@pip//pypi__mysqlclient",
         "@pip//pypi__protobuf",
         "@pip//pypi__slack_bolt",
         "@pip//pypi__slack_sdk",
         "@pip//pypi__sqlalchemy",
-        "@pip//pypi__mysqlclient",
-        "@pip//pypi__mariadb",
     ],
 )
 
@@ -67,21 +67,22 @@ container_image(
         "/usr/bin/python3": "/usr/local/bin/python3",
     },
 )
+
 # See https://github.com/bazelbuild/rules_docker/blob/master/testing/examples/run_instruction_apt_pkgs/BUILD
 download_pkgs(
-    name="mysql_pkg",
-    image_tar =":python38_base_image.tar",
+    name = "mysql_pkg",
+    image_tar = ":python38_base_image.tar",
     packages = [
         "default-libmysqlclient-dev",
     ],
 )
+
 install_pkgs(
-    name="mysql_pkg_image",
+    name = "mysql_pkg_image",
     image_tar = ":python38_base_image.tar",
-    installables_tar=":mysql_pkg.tar",
+    installables_tar = ":mysql_pkg.tar",
     installation_cleanup_commands = "rm -rf /var/lib/apt/lists/*",
     output_image_name = "mysql_pkg_image",
-
 )
 
 py3_image(
@@ -93,4 +94,3 @@ py3_image(
     visibility = ["//visibility:public"],
     deps = [":slackbot"],
 )
-
