--- a/k8s/encryption.deployment.yaml
+++ b/k8s/encryption.deployment.yaml
@@ -14,6 +14,7 @@ spec:
     metadata:
       annotations:
         linkerd.io/inject: enabled
+        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
       labels:
         app: encryption
         name: encryption
