--- a/k8s/password-exchange.deployment.yaml
+++ b/k8s/password-exchange.deployment.yaml
@@ -14,6 +14,7 @@ spec:
     metadata:
       annotations:
         linkerd.io/inject: enabled
+        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
       labels:
         app: passwordexchange
         name: passwordexchange
