--- a/app/cmd/web/BUILD.bazel
+++ b/app/cmd/web/BUILD.bazel
@@ -16,8 +16,13 @@ go_library(
         "//protos:databasepb_go_proto",
         "//protos:encryptionpb_go_proto",
         "//protos:messagepb_go_proto",
+        "@com_github_aws_aws_sdk_go//aws",
+        "@com_github_aws_aws_sdk_go//aws/credentials",
+        "@com_github_aws_aws_sdk_go//aws/session",
+        "@com_github_aws_aws_sdk_go//service/s3",
+        "@com_github_dapr_go_sdk//client",
         "@com_github_gin_gonic_gin//:gin",
-        "@com_github_p768lwy3_gin_server_timing//:go_default_library",
+        "@com_github_p768lwy3_gin_server_timing//:gin-server-timing",
         "@com_github_rabbitmq_amqp091_go//:amqp091-go",
         "@com_github_rs_xid//:xid",
         "@com_github_rs_zerolog//log",
