--- a/k8s/password-exchange.deployment.yaml
+++ b/k8s/password-exchange.deployment.yaml
@@ -13,27 +13,26 @@ spec:
   template:
     metadata:
       annotations:
+        dapr.io/app-id: passwordexchange-web
+        dapr.io/enabled: "true"
         linkerd.io/inject: enabled
         proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
       labels:
         app: passwordexchange
         name: passwordexchange
-        phase: "%{PHASE}"
-        version: "%{VERSION}" 
+        phase: '%{PHASE}'
+        version: '%{VERSION}'
     spec:
       containers:
-      - envFrom:
+      - args:
+        - web
+        env:
+        - name: PASSWORDEXCHANGE_RUNNINGENVIRONMENT
+          value: '%{PHASE}'
+        envFrom:
         - secretRef:
             name: test-secret
         image: ghcr.io/anthony-bible/passwordexchange-container-prod
-        args: ["web"]
-        env:
-        - name: "PASSWORDEXCHANGE_RUNNINGENVIRONMENT"
-          value: "%{PHASE}"
         name: password-exchange
         ports:
         - containerPort: 8080
-
-
-
-
