--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -26,10 +26,11 @@ data:
     PASSWORDEXCHANGE_RABQNAME: ENC[AES256_GCM,data:FnHcfNWeY6I=,iv:9h4ZHD816pNXv4b/cDGp1c/9qVnj5ZlC//uiWHKUd60=,tag:p8v7wO9bNe4sRbCFxEJThA==,type:str]
     PASSWORDEXCHANGE_RABUSER: ENC[AES256_GCM,data:HcgNGP0QVY0=,iv:qeO69j2oYFtNjqR5orDh+OIW0sKEgS0JukZbUEY/eAk=,tag:ITnaeRDLlfuPqnEJyYKHMg==,type:str]
     PASSWORDEXCHANGE_RABPASS: ENC[AES256_GCM,data:cB9bmk5gWlw=,iv:GiAOMeXdIDXTRjQiI/Q9jDUButmm7tuJeZIhNha1oRg=,tag:ePCloHnm4Uz74wQartjozQ==,type:str]
-    PASSWORDEXCHANGE_S3APIID: ENC[AES256_GCM,data:qtetlO0jmSjeIEcK1napouep+cmJZIbij+w6Vw0AiLQ7Sosv,iv:dg2VpuLmV5mCErlV855bB8W6CLK7bOXMl75wkFpueD8=,tag:ZQv6rQkPeFiFZpNWM24hDA==,type:str]
-    PASSWORDEXCHANGE_S3APIKEY: ENC[AES256_GCM,data:BMaJqQA6tuzF/JSUwUxqNWhFYSp7P4rPnTEFofQbqv7WlhM+jgiYBXTgoWg=,iv:gOQO7HcD74azoKVrCrc7Bz7Mf3cziSCgKPrrRO4TnY0=,tag:n/8MKJ6Sgm8t8sgiac2FfA==,type:str]
+    PASSWORDEXCHANGE_S3ID: ENC[AES256_GCM,data:KH/qvwm88gYz0gO6tSBSWh3/b9AQ/OZWBUrvNCYzquTyNlOB,iv:KLCkRMUAcLqTQisbUW9nkK8168/vPcF9nzXE1FmIlLo=,tag:knOEolRYdNqaCqQTNPFVWA==,type:str]
+    PASSWORDEXCHANGE_S3KEY: ENC[AES256_GCM,data:2xV9yhJDatSqPLkOFrfnoBfWOse/NHsz8qR4TieTkqy30qBvJCQjxHpgmI8=,iv:prgIXHl7GN1jdN3afXpfuoXDpGuvIcBgUcaRKjXqIPY=,tag:9djtLoRcmvHXLuK0Q3w4Sw==,type:str]
     PASSWORDEXCHANGE_S3ENDPOINT: ENC[AES256_GCM,data:QfFaJp7l0jDqzb9gbZrexbIifgNo5ML1gYpJ2QFcLdIyahSy43q8cS3RxVypSJP8DIaqGA==,iv:8mW4l8o8ZoK89gsMMbnip3igqrZwLCw06Ggj8K5xwVI=,tag:l73pES4Nv0wnP5dcgDsh1g==,type:str]
     PASSWORDEXCHANGE_S3BUCKET: ENC[AES256_GCM,data:jcadrq55nmGhh4Zv169eCyi8bx7Qg7B9x4IdPg==,iv:3SaWey+YgKBoM/F8bscmmEpc98O8R5Av1ps4cosyHQg=,tag:LraoFOtuUDY5vljmw0R4Kw==,type:str]
+    PASSWORDEXCHANGE_S3REGION: ENC[AES256_GCM,data:tKfNuO+aY/TLnwA9PbjZoA==,iv:XnmC1P0sRE11+FV5eKZeEUP0u6kZVMI34KiSASwoFxo=,tag:Kyl0tD35VdJfAkkWcIOdaw==,type:str]
     OAUTHDB_PASSWORD: ENC[AES256_GCM,data:lSPN2WXziBCnUoZelyIZMeKfN/ZKMyDN,iv:lDIhSPbVH2MF5giNQkBJ9dMfLJzdV7rcDFNwFPsTMAY=,tag:WMhpkn+Mhj4VVHhurgEZCg==,type:str]
     OAUTHDB_USER: ENC[AES256_GCM,data:r9/sTZEsVfDHH2hz,iv:lS3e2+JL/8rkBI1Trzal2KUg0sDb24Zw4YbVU8IRp9I=,tag:bVHhRukiezkjxPN8qmMHvw==,type:str]
     OAUTHDB_NAME: ENC[AES256_GCM,data:cU4HS3hXYh0=,iv:CEdM2vjSwfEp+inIRWfyOfziRm2qnuOEgatPRW5JZ4I=,tag:U+GrueRc08R49o86f11Gmw==,type:str]
@@ -49,8 +50,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-01-02T22:15:49Z"
-    mac: ENC[AES256_GCM,data:7zQ6rR7UF5EBTtMX0dv/7WXO/6o+o3jePEmvqBg2sVsk1GBihbCwdbRny/GXo8Q+MKiNxPrG6icxqS8lhQzQVnqIZC8rdBTygzbBVcM1+tZA0VOCAbKnQl6fDnQ3qCuX0IZV05VMKOnTFnx42q0OfeZ1sEe85K6b1TjZ6Gw1g/g=,iv:iilAjRaqiKSWDJDqWCy7NdK2BlxlJ781bZjHs75JGF8=,tag:NsIGCF/D4zANIBY+k1LF0g==,type:str]
+    lastmodified: "2023-01-15T04:12:03Z"
+    mac: ENC[AES256_GCM,data:QNiCIxOs26gdt1Jdl3XpK/xzQp3RrjLTdEfBWt3+Kj0Qax8QLZ6j4NS2UMV9yYGeGIQypTZVbGBoEM5nnkQs1AOuAYH104uy4DX0+1fZHfvV58lz8Yw6rvRC3z4bFuNKryFpWdgTGSrw3aTVta9bQfDyIslspk+EOJ+1dwb6yvc=,iv:KhlAPJJRQkHhgMavq63STWIGS/ywZ35Cz1+Fd92uhPY=,tag:nitCdxMTQZDH3fGh4CBI7w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
