--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.PAT }}
+          password: ${{ secrets.PUSH_SECRET}}
       - uses: actions/checkout@v3
       #install neccessary tools under $GITHUB_WORKSPACE
       - name: Install tools
