ADD rand-images keys

--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -40,6 +40,9 @@ data:
     #ENC[AES256_GCM,data:VASYAPIe9HgwUCZu2un4UfhGD3rLW2yWp1udWyKkmy09dPkPMjxUdWTcuVSrumMuBrjl6tF3rzRq4R/Ddu1MY301iPwhMJpazfPg0szLib2rnUFi22ry88sg4gqn,iv:CQU11ex7wjnGnmBDd7eNiOHtR5pxTEIq0fUq6KPejlw=,tag:3ERwW5AEq1fmP0J8HUAfdw==,type:comment]
     SLACK_CLIENT_ID: ENC[AES256_GCM,data:mqVmPlclrlG2AM7Bv2ffvdrCsj1OZ5I2GYwabHSkFq2qRmMC,iv:F3m0p/NUYetadI9P1h9rFYRx4e39iYmctj+i2UHWLfM=,tag:qKoHGWSvIUWCe4R4J0JS4w==,type:str]
     SLACK_CLIENT_SECRET: ENC[AES256_GCM,data:Wao+a7eZbmFynPBIn1UHNvv4c7c62x4b68JhBgZA0H0y3Jb/ljU066S0JtI=,iv:hFQfBu0WHK+PEFMh04qfqj9tV7NNxLXjkMMtx+DIvb0=,tag:e4nm1tChIORH9/iWioVG7w==,type:str]
+    #ENC[AES256_GCM,data:lySj4vXlBpUg6tY=,iv:4WIFqmVLI9VyGkFI5kpKuJX1vMj9Z9q0Ohpav7MelWg=,tag:1fH+2LH51vz3nPR6YyWx2g==,type:comment]
+    IMAGES_ID: ENC[AES256_GCM,data:zOwmCgnFAbH/Gfp0Dnq23GFdXNoijICxdIOh81faxIK1rFIK,iv:YddhxbzI692WBuN9ySzjq/+QELnRMhueBkFysmssi54=,tag:8ur7hZpBXR+fFuRxlTqeQw==,type:str]
+    IMAGES_KEY: ENC[AES256_GCM,data:R369D/CO/cscOLKIBhPmTqc9cuB7R8yj3vf1cKQkOGAAjnEAzqOFmt7aWYo=,iv:WoKFHZxLT+NPoeOLHtVcpqOwm9/a2ROSlcrdaiUob7M=,tag:CAngbY05/BfPXybg+xvHeQ==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-west-2:842805395457:key/e5e35884-80f1-4e88-801a-6210686a54a3
@@ -50,8 +53,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-01-15T04:12:03Z"
-    mac: ENC[AES256_GCM,data:QNiCIxOs26gdt1Jdl3XpK/xzQp3RrjLTdEfBWt3+Kj0Qax8QLZ6j4NS2UMV9yYGeGIQypTZVbGBoEM5nnkQs1AOuAYH104uy4DX0+1fZHfvV58lz8Yw6rvRC3z4bFuNKryFpWdgTGSrw3aTVta9bQfDyIslspk+EOJ+1dwb6yvc=,iv:KhlAPJJRQkHhgMavq63STWIGS/ywZ35Cz1+Fd92uhPY=,tag:nitCdxMTQZDH3fGh4CBI7w==,type:str]
+    lastmodified: "2023-10-14T17:53:28Z"
+    mac: ENC[AES256_GCM,data:fy1EHHHzoVeu/etGtzQ0jgv2aL7c7bVvuXLU6n6YvUSauk/UFBsTf8z2NmlTjGEG620aq4pzAs1cgTARxEaKBNRdK9IU1CY7Attnf4wCdR43GvUUVfqYsYaicQ/QlkeVteeeo+z/JUtOynDLTOi0ThTWIjsSyapWzNMPW5F1hb0=,iv:2lCYLF6aJPVKA/8MERRhnf68LtYuinYYMSgq8PArlJk=,tag:1NTCgakVMDlucLai1AAECA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.7.3
+    version: 3.8.1
