--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       #install neccessary tools under $GITHUB_WORKSPACE
       - name: Install tools
-        run: sudo apt update && sudo apt install -y libmariadb-dev &&  sudo apt purge -y python2.7*
+        run: sudo apt update && sudo apt install -y libmariadb-dev
 
       - name: generate bazelrc
         env:
