--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -63,6 +63,8 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.PUSH_SECRET }}
       - uses: actions/checkout@v3
+      - name: Setup Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Download Go application artifact
         uses: actions/download-artifact@v4
         with:
@@ -91,6 +93,8 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.PUSH_SECRET }}
       - uses: actions/checkout@v3
+      - name: Setup Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Build and push slackbot Docker image
         uses: docker/build-push-action@v4
         with:
