fix(ci): update branch name to main in bazel-build workflow

--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -157,7 +157,7 @@ jobs:
           repository: "Anthony-Bible/password-exchange-deploy"
           directory: ./build
           force: false # Be careful with force push
-          branch: ${{ github.ref_name }} # Push to a branch matching current, or specific like main/master
+          branch: main
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
