ci: add image digest outputs for Docker builds and integrate into manifests

--- a/k8s/database.deployment.yaml
+++ b/k8s/database.deployment.yaml
@@ -27,10 +27,11 @@ spec:
       - envFrom:
         - secretRef:
             name: test-secret
-        image: ghcr.io/anthony-bible/passwordexchange-database
+        image: ghcr.io/anthony-bible/passwordexchange-database@sha256:%{MAIN_IMAGE_SHA}
         args: ["database"]
         env:
         - name: "PASSWORDEXCHANGE_RUNNING_ENVIRONMENT"
           value: "%{PHASE}"
         name: database
+
 
