--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
   build_main_image:
     runs-on: ubuntu-24.04
     needs: [determine_version]
+    outputs:
+      main_image_digest: ${{ steps.build-and-push-main.outputs.digest }}
     env:
       VERSION: ${{ needs.determine_version.outputs.version }}
       PHASE: ${{ needs.determine_version.outputs.phase }}
@@ -60,6 +62,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Build and push main Docker image
         uses: docker/build-push-action@v4
+        id: build-and-push-main
         with:
           context: .
           push: true
@@ -70,6 +73,8 @@ jobs:
   build_slackbot_image:
     runs-on: ubuntu-24.04
     needs: determine_version
+    outputs:
+      slackbot_image_digest: ${{ steps.build-and-push-slackbot.outputs.digest }}
     env:
       VERSION: ${{ needs.determine_version.outputs.version }}
       PHASE: ${{ needs.determine_version.outputs.phase }}
@@ -85,6 +90,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Build and push slackbot Docker image
         uses: docker/build-push-action@v4
+        id: build-and-push-slackbot
         with:
           context: ./slackbot
           file: ./slackbot/Dockerfile
@@ -99,6 +105,8 @@ jobs:
     env:
       VERSION: ${{ needs.determine_version.outputs.version }}
       PHASE: ${{ needs.determine_version.outputs.phase }}
+      MAIN_IMAGE_DIGEST: ${{ needs.build_main_image.outputs.main_image_digest }}
+      SLACKBOT_IMAGE_DIGEST: ${{ needs.build_slackbot_image.outputs.slackbot_image_digest }}
     steps:
       - uses: actions/checkout@v3
       - name: Render manifests
@@ -128,7 +136,12 @@ jobs:
 
           # Replace variables in the manifest
           if [ -s combined.yaml ] || grep -q -e "%{VERSION}" -e "%{PHASE}" combined.yaml; then
-            sed -i -e "s/%{VERSION}/${VERSION}/g" -e "s/%{PHASE}/${PHASE}/g" combined.yaml
+            sed -i \
+              -e "s/%{VERSION}/${VERSION}/g" \
+              -e "s/%{PHASE}/${PHASE}/g" \
+              -e "s/%{MAIN_IMAGE_SHA}/${MAIN_IMAGE_DIGEST}/g" \
+              -e "s/%{SLACKBOT_IMAGE_SHA}/${SLACKBOT_IMAGE_DIGEST}/g" \
+              combined.yaml
           fi
 
           # Save to appropriate directory
