--- a/k8s/email.deployment.yaml
+++ b/k8s/email.deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - envFrom:
         - secretRef:
             name: test-secret
-        image: ghcr.io/anthony-bible/passwordexchange-container-prod
+        image: ghcr.io/anthony-bible/passwordexchange-container-prod@sha256:%{MAIN_IMAGE_DIGEST}
         args: ["email"]
         env:
         - name: "PASSWORDEXCHANGE_RUNNINGENVIRONMENT"
@@ -33,6 +33,7 @@ spec:
         name: email
         ports:
         - containerPort: 8080
+
 
 
 
