--- a/k8s/encryption.deployment.yaml
+++ b/k8s/encryption.deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - envFrom:
         - secretRef:
             name: test-secret
-        image: ghcr.io/anthony-bible/passwordexchange-encryption
+        image: ghcr.io/anthony-bible/passwordexchange-encryption@sha256:%{MAIN_IMAGE_DIGEST}
         args: ["encryption"]
         env:
         - name: "PASSWORDEXCHANGE_RUNNING_ENVIRONMENT"
@@ -33,5 +33,6 @@ spec:
         name: encryption
 
 ---
+
 
 
