--- a/k8s/password-exchange.deployment.yaml
+++ b/k8s/password-exchange.deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - envFrom:
         - secretRef:
             name: test-secret
-        image: ghcr.io/anthony-bible/passwordexchange-container-prod
+        image: ghcr.io/anthony-bible/passwordexchange-container-prod@sha256:%{MAIN_IMAGE_DIGEST}
         args: ["web"]
         env:
         - name: "PASSWORDEXCHANGE_RUNNINGENVIRONMENT"
@@ -33,6 +33,8 @@ spec:
         name: password-exchange
         ports:
         - containerPort: 8080
+
+
 
 
 
