--- a/k8s/password-exchange.deployment.yaml
+++ b/k8s/password-exchange.deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - envFrom:
         - secretRef:
             name: test-secret
-        image: ghcr.io/anthony-bible/passwordexchange-container-prod@sha256:%{MAIN_IMAGE_DIGEST}
+        image: ghcr.io/anthony-bible/passwordexchange-container-prod@sha256:%{MAIN_IMAGE_SHA}
         args: ["web"]
         env:
         - name: "PASSWORDEXCHANGE_RUNNINGENVIRONMENT"
