--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,8 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Build and push slackbot Docker image
         uses: docker/build-push-action@v4
+        env:
+          SOURCE_DATE_EPOCH: 0
         id: build-and-push-slackbot
         with:
           context: ./slackbot
