--- a/k8s/email.deployment.yaml
+++ b/k8s/email.deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - envFrom:
         - secretRef:
             name: test-secret
-        image: ghcr.io/anthony-bible/passwordexchange-container-prod@%{MAIN_IMAGE_SHA}
+        image: ghcr.io/anthony-bible/passwordexchange-container-%{PHASE}@%{MAIN_IMAGE_SHA}
         args: ["email"]
         env:
         - name: "PASSWORDEXCHANGE_RUNNINGENVIRONMENT"
