refactor(ci): update Docker context and file paths in workflow and Dockerfile
- Changed Docker build context from './slackbot' to '.' in GitHub Actions workflow
- Updated Dockerfile to use path adjustments for requirements and source code copying

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
           SOURCE_DATE_EPOCH: 0
         id: build-and-push-slackbot
         with:
-          context: ./slackbot
+          context: .  # Changed from ./slackbot to .
           file: ./slackbot/Dockerfile
           push: true
           tags: ghcr.io/anthony-bible/passwordexchange-slackbot-${{ env.PHASE }}:${{ env.VERSION }}
