feat(k8s): add RabbitMQ setup with Kubernetes Operator and update configurations

--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -22,7 +22,7 @@ data:
     PASSWORDEXCHANGE_HCAPTCHA_SECRET: ENC[AES256_GCM,data:WDuygJkmvt361wIo/fIXZZ7cTJsFqCH5g92tZHDCz30h8h6btu1tze6s0TGAJpjkSJzi7PpM92o=,iv:96tOvQph6daiiVtnLDHAIzYdEXEDDbs4u3rA+JgHs7Y=,tag:Cx16BwZ0o1wdl4GxCeicng==,type:str]
     PASSWORDEXCHANGE_HCAPTCHA_SITEKEY: ENC[AES256_GCM,data:efO/OZrpcapA9LGHHlxdAKoGJL72B1n3gqNwIXCd+HNKnfN6Ei/ZVnn4sEQn3Kim,iv:NmN0caFkOISrZ2RsLnOd1/9w+EhlPpFb/D9XbHgUoXQ=,tag:GmzcgFsqeVcWrA9UdLdmPQ==,type:str]
     PASSWORDEXCHANGE_RABPORT: ENC[AES256_GCM,data:kezIfRPHjNE=,iv:Vyr1fxX3MwfO7gomP2GG2jNBAlv7+qFDa9KiAUBhjfA=,tag:+YkD45xdD6X/RRd+6WxGZg==,type:str]
-    PASSWORDEXCHANGE_RABHOST: ENC[AES256_GCM,data:YFgYGz+nXqJfbxqT70n2dQ==,iv:+LxYP4JBd8GOJ0qDmhVCv2+Bd1twhspWpjXbTlCMF5E=,tag:3ZqkFlzG4xp737tQj4qvzQ==,type:str]
+    PASSWORDEXCHANGE_RABHOST: ENC[AES256_GCM,data:0o3qHHjzHTko3x8C,iv:/B5r9qgCE8q3dt6KyyS+FUH6i96W1KX3RdaYIAEh5Pg=,tag:VNCA+XIyQPP1eXT4QF4IpQ==,type:str]
     PASSWORDEXCHANGE_RABQNAME: ENC[AES256_GCM,data:FnHcfNWeY6I=,iv:9h4ZHD816pNXv4b/cDGp1c/9qVnj5ZlC//uiWHKUd60=,tag:p8v7wO9bNe4sRbCFxEJThA==,type:str]
     PASSWORDEXCHANGE_RABUSER: ENC[AES256_GCM,data:HcgNGP0QVY0=,iv:qeO69j2oYFtNjqR5orDh+OIW0sKEgS0JukZbUEY/eAk=,tag:ITnaeRDLlfuPqnEJyYKHMg==,type:str]
     PASSWORDEXCHANGE_RABPASS: ENC[AES256_GCM,data:cB9bmk5gWlw=,iv:GiAOMeXdIDXTRjQiI/Q9jDUButmm7tuJeZIhNha1oRg=,tag:ePCloHnm4Uz74wQartjozQ==,type:str]
@@ -45,8 +45,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-11-12T05:40:22Z"
-    mac: ENC[AES256_GCM,data:V8pQ0U2XBXfT3JS7a0qqFii/7zbGrNotv57nYaqKzE1enew9pQ47BBnTLUfCb2Ux7kSfbH0Sp/1TbgB8QFVnnM5cd/GpO7wcFkpQ0tnaPeQ0wG04nzOpGK+40mI110SJZAe5MASdNJpMjbaVwJkeFEt/cKIbia4XCkwaVBRgEh8=,iv:DCpOFQidOcpX6YT5xkAJ/paJFEt4H1/n7iiJJJLyLSU=,tag:FTZeBpds/zkgv/SKxMX72g==,type:str]
+    lastmodified: "2025-05-24T18:40:57Z"
+    mac: ENC[AES256_GCM,data:WUJR2B/UzQGLUCz/f7vQYae9EWqJKtQmuKgbc+k3M1ipADdRoJkEqRR6QySzBs0EZKO/oW8dL9L4LsYSy5sruAcXMwGTxhXtV0V/eitKTBQL4IdmM7LdCUwZvxnBxddqrAUlE8Qx2nQLXVIUCm8C00eiqIXSODFzZfSwbCRe35w=,iv:BEkv8/wltpDVJWdL40rO1LXgbF0rnY4qWvZyNI+65bA=,tag:tYQPQrm8ml2oWGQJC2jKsQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.7.3
+    version: 3.8.1
