--- a/slackbot/requirements.txt
+++ b/slackbot/requirements.txt
@@ -4,7 +4,7 @@ Flask==2.3.3
 google==3.0.0
 greenlet==2.0.2
 grpcio==1.71.0
-grpcio-tools==1.50.0
+grpcio-tools>=1.62.0
 gunicorn==23.0.0
 importlib-metadata==5.2.0
 itsdangerous==2.1.2
@@ -12,7 +12,7 @@ Jinja2==3.1.6
 mariadb>=1.0.11
 MarkupSafe==2.1.5
 mysqlclient==2.1.1
-protobuf==4.21.9
+protobuf>=5.26.0
 six==1.16.0
 slack-bolt==1.23.0
 slack-sdk==3.35.0
